--- a/style.scss
+++ b/style.scss
@@ -6,8 +6,9 @@
 
 @import "_assets/sass/inc/header.scss";
 
+@import "_assets/sass/hcb.scss";
 @import "_assets/sass/main.scss";
 @import "_assets/sass/single.scss";
 @import "_assets/sass/page.scss";
 
-@import "_assets/sass/inc/footer.scss";
+@import "_assets/sass/inc/footer.scss"; 
