--- a/_assets/sass/config/extends.scss
+++ b/_assets/sass/config/extends.scss
@@ -101,7 +101,6 @@
         color: black;
         margin: 15pt 0;
         
-        
         h1,
         h2,
         h3, 
@@ -115,7 +114,7 @@
             width: 90%;
             text-align: left;
             background: none;
-            letter-spacing: 1px;
+            letter-spacing: 0px;
         }
         
         h3 {
@@ -137,12 +136,6 @@
         }
     }
     
-    .post_content_title,
-    .page_content_title {
-        
-        text-align: center;
-    }
-
     h1,
     h2,
     h3, 
@@ -155,7 +148,16 @@
         margin: 5px auto;
         margin-top: 10pt;
         width: 90%;
+        letter-spacing: 0px;
     }
+    
+    .post_content_title,
+    .page_content_title {
+        
+        text-align: center;
+        letter-spacing: 1px
+    }
+
     
     h3 {
         
@@ -183,8 +185,9 @@
 
     ul, ol {
 
-        padding-left: 10px;
+        padding-left: 25pt;
         padding-top: 20pt;
+        width: 90%;
 
         li {
 
