add link colour variables

--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -161,7 +161,7 @@ body {
     .section_category,
     .section_search {
         
-        border: orange 1px solid;
+        /* border: orange 1px solid; */
         
         h2 {
             
@@ -264,7 +264,7 @@ body {
         .pagination, navigation {
             
             color: green;
-            border: solid yellow 1px;
+            /* border: solid yellow 1px; */
             text-align: center;
             padding: 15px 0;
             color: black;
