add search entry bg styles

--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -225,6 +225,7 @@ body {
                     background: none;
                     border: none;
                     text-align: center;
+                    margin: 7px auto;
                     
                     #s {   
 
@@ -289,6 +290,7 @@ body {
             }
         }
         
+        .search-entry,
         .author-entry,
         .category-entry,
         .archive-entry {
